--- a/styles.css
+++ b/styles.css
@@ -11,4 +11,11 @@ button {
     width: 2em;
     height: 2.5em;
 }
-
+.div {
+    float: left;
+    width: 200px;
+    height: 200px;
+    background-color: black;
+    margin-bottom: 20px;
+    margin-right: 20px;
+}
