--- a/styles.css
+++ b/styles.css
@@ -2,21 +2,22 @@ body {
   padding: 20px;
 }
 button {
-    margin-top: 5px;
+    /*margin-top: 5px;*/
     line-height: 60px;
     font-weight: bold;
     padding: 0 40px;
-    background: black;
+    background: lightcoral;
     border: none;
     width: 2em;
     height: 2.5em;
 }
-.div {
-    float: left;
-    width: 200px;
-    height: 200px;
-    background-color: black;
-    margin-bottom: 20px;
-    margin-right: 20px;
+div {
+    width: 10em;
+    height: 10em;
+    background: black;
+    border: white;
+    border-style: solid;
+    border-width: 2em;
 }
+
 
