--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ button {
     border: none;
     width: 2em;
     height: 2.5em;
+    float: left;
 }
 div {
     width: 10em;
@@ -18,8 +19,6 @@ div {
     border: white;
     border-style: solid;
     border-width: 2em;
-}
-div.dbl {
-    visibility: hidden;
+    float: left;
 }
 
