--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,7 @@
 body {
   padding: 20px;
 }
-button {
-    /*margin-top: 5px;*/
+.boxes {
     line-height: 60px;
     font-weight: bold;
     padding: 0 40px;
@@ -21,4 +20,11 @@ div {
     border-width: 2em;
     float: left;
 }
-
+button {
+    display: block;
+    border:black 2px solid; 
+    border-radius: 20px;
+    font-size: 1em;
+    padding:10px;
+    color: whitesmoke;
+}
